# vscode-compose-template

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
node-server/.devcontainer/: Dockerfile  devcontainer.json
python-server/: pyproject.toml
python-server/.devcontainer/: Dockerfile  devcontainer.json
server/.devcontainer/: Dockerfile  devcontainer.json  swagger.yml
ui/.devcontainer/: Dockerfile  devcontainer.json
